test_suite/alan-2022-examples/passing/000002_random.alan
source F begin boolean v_, n; boolean l; integer array m, q; boolean y94, A_; call ZR(1339400) end
