test_suite/alan-2022-examples/failing/001720_mutation.alan
source d begin call l) () end
